bug fix and update

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,7 +1,7 @@
 SUBDIRS=icons images
 
 desktopdir = $(datadir)/applications
-desktop_in_files = glogic.desktop.in
+desktop_in_files = org.astralco.glogic.desktop.in
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
 
