--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -269,7 +269,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 SUBDIRS = icons images
 desktopdir = $(datadir)/applications
-desktop_in_files = glogic.desktop.in
+desktop_in_files = org.astralco.glogic.desktop.in
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 CLEANFILES = \
 	$(desktop_DATA)
