Update to makefile

--- a/configure.ac
+++ b/configure.ac
@@ -1,13 +1,13 @@
 AC_PREREQ([2.64])
-AC_INIT(glogic, 2.6)
+AC_INIT([glogic], [3.0], [ekureedem480@gmail.com])
 AM_INIT_AUTOMAKE
-AM_PATH_PYTHON(3.1)
+AM_PATH_PYTHON(3.9)
 
 GETTEXT_PACKAGE=glogic
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [GETTEXT package name])
 AM_GLIB_GNU_GETTEXT
-IT_PROG_INTLTOOL([0.35.0])
+AM_GNU_GETTEXT_VERSION([0.19.7])
 
 AM_INIT_AUTOMAKE([1.11])
 AC_CONFIG_MACRO_DIR([m4])
@@ -23,10 +23,6 @@ then \
 else \
 	echo This is a released software; \
 fi
-
-AC_SUBST(BZRREV, $bzrrev)
-
-YELP_HELP_INIT
 
 AC_CONFIG_FILES([
 Makefile
