--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -4,8 +4,8 @@ version: '3.0.0' # just for humans, typically '1.2+git' or '1.3.2'
 summary: A logic gate circuit simulator # 79 char long summary
 description: |
   A logic gate simulator for linux developed with Gtk and python.
-grade: edge # must be 'stable' to release into candidate/stable channels
-confinement: devmode
+grade: devel # must be 'stable' to release into candidate/stable channels
+confinement: strict
 compression: lzo
 
 architectures:
