--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -5,5 +5,6 @@ Suite3 : stable
 Maintainer : Ekure Edem <ekureedem480@gmail.com>
 Section : science
 Copyright-File : ./COPYING
+MIME-Desktop-File: ./data/org.astralco.glogic.desktop
 Breaks3 : glogic
-Depends3 : python3-gi, PyGObject
+Depends3 : python3-gi
