--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -26,7 +26,7 @@ apps:
     plugs: [home]
 
 parts:
-  pynes:
+  glogic:
     plugin: python
     source: https://github.com/astraldev/GLogic.git
     source-type: git
