--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -4,7 +4,7 @@ version: '3.1.0' # just for humans, typically '1.2+git' or '1.3.2'
 summary: A logic gate circuit simulator # 79 char long summary
 description: |
   A logic gate simulator for linux developed with Gtk and python.
-grade: devel # must be 'stable' to release into candidate/stable channels
+grade: stable # must be 'stable' to release into candidate/stable channels
 confinement: strict
 
 architectures:
@@ -21,7 +21,7 @@ plugs:
     default-provider: gtk-common-themes
 
 apps:
-  pynes:
+  glogic:
     command: glogic
     plugs: [home]
 
