--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,6 +1,6 @@
-name: glogic # you probably want to 'snapcraft register <name>'
+name: ggate # you probably want to 'snapcraft register <name>'
 base: core22 # the base snap is the execution environment for this snap
-version: '3.1.0' # just for humans, typically '1.2+git' or '1.3.2'
+version: '4.0.0' # just for humans, typically '1.2+git' or '1.3.2'
 summary: A logic gate circuit simulator # 79 char long summary
 description: |
   A logic gate simulator for linux developed with Gtk and python.
@@ -21,14 +21,14 @@ plugs:
     default-provider: gtk-common-themes
 
 apps:
-  glogic:
-    command: glogic
+  ggate:
+    command: ggate
     plugs: [home]
 
 parts:
-  glogic:
+  ggate:
     plugin: python
-    source: https://github.com/astraldev/GLogic.git
+    source: https://github.com/astraldev/GGate.git
     stage-packages:
       - python3-gi
       - python3-gi-cairo
