--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,10 +1,10 @@
 [DEFAULT]
-Source : glogic
-Package3 : glogic
+Source : ggate
+Package3 : ggate
 Suite3 : stable
 Maintainer : Ekure Edem <ekureedem480@gmail.com>
 Section : science
 Copyright-File : ./COPYING
-MIME-Desktop-File: ./data/org.astralco.glogic.desktop
-Breaks3 : glogic
+MIME-Desktop-File: ./data/org.astralco.ggate.desktop
+Breaks3 : ggate
 Depends3 : python3-gi
