--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "pycairo (>=1.27.0,<2.0.0)",
     "pygobject (>=3.52.3,<4.0.0)",
     "packaging (>=24.2,<25.0)",
+    "python-igraph (>=0.11.8,<0.12.0)",
+    "shapely (==2.0.7)",
 ]
 
 [tool.ruff.lint]
