--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,10 @@ requires-python = ">= 3.10,<4.0"
 dependencies = [
     "pycairo (>=1.27.0,<2.0.0)",
     "pygobject (>=3.52.3,<4.0.0)",
-    "packaging (>=24.2,<25.0)",
+    "packaging (>=25.0)",
     "python-igraph (>=0.11.9,<0.12.0)",
     "shapely (==2.1.1)",
+    "meson-python (>=0.18.0,<0.19.0)",
 ]
 
 [tool.ruff.lint]
@@ -28,5 +29,5 @@ mypy = "^1.15.0"
 ruff = "^0.11.2"
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["meson-python>=0.11.0"]
+build-backend = "mesonpy"
